// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrderConfirmation /> should call handleConfirmOrder when confirmOrder is clicked 1`] = `
<div>
  <main
    className="bg-light order-details-main"
    style={
      Object {
        "minHeight": "calc(100vh - 151px)",
      }
    }
  >
    <section
      className="card text-center order-details"
    >
      <h4>
        Order Summary
      </h4>
      <div
        className="m1"
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="f1"
        >
          Meal
        </div>
        <div
          className="f1"
        >
          Test meal
        </div>
      </div>
      <div
        className="m1"
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="f1"
        >
          Quantity
        </div>
        <div
          className="f1"
        >
          3
           
          plate
          s
        </div>
      </div>
      <div
        className="font-weight-bold m1"
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="f1"
        >
          <h5>
            TOTAL
          </h5>
        </div>
        <div
          className="f1"
        >
          <h5>
            ₦ 
            6000
          </h5>
        </div>
      </div>
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-around",
          }
        }
      >
        <Button
          className="btn btn-default"
          onClick={[Function]}
          style={
            Object {
              "margin": "1rem",
            }
          }
          value="Back to menu"
        />
        <Button
          className="btn btn-default"
          onClick={[Function]}
          style={
            Object {
              "margin": "1rem",
            }
          }
          value="Confirm Order"
        />
      </div>
    </section>
  </main>
  <Footer />
</div>
`;

exports[`<OrderConfirmation /> should match snapshot 1`] = `
<div>
  <main
    className="bg-light order-details-main"
    style={
      Object {
        "minHeight": "calc(100vh - 151px)",
      }
    }
  >
    <section
      className="card text-center order-details"
    >
      <h4>
        Order Summary
      </h4>
      <div
        className="m1"
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="f1"
        >
          Meal
        </div>
        <div
          className="f1"
        />
      </div>
      <div
        className="m1"
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="f1"
        >
          Quantity
        </div>
        <div
          className="f1"
        >
          1
           
          plate
        </div>
      </div>
      <div
        className="font-weight-bold m1"
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="f1"
        >
          <h5>
            TOTAL
          </h5>
        </div>
        <div
          className="f1"
        >
          <h5>
            ₦ 
          </h5>
        </div>
      </div>
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-around",
          }
        }
      >
        <Button
          className="btn btn-default"
          onClick={[Function]}
          style={
            Object {
              "margin": "1rem",
            }
          }
          value="Back to menu"
        />
        <Button
          className="btn btn-default"
          onClick={[Function]}
          style={
            Object {
              "margin": "1rem",
            }
          }
          value="Confirm Order"
        />
      </div>
    </section>
  </main>
  <Footer />
</div>
`;

exports[`<OrderConfirmation /> should navigate to previous page when goBack is clicked 1`] = `
<div>
  <main
    className="bg-light order-details-main"
    style={
      Object {
        "minHeight": "calc(100vh - 151px)",
      }
    }
  >
    <section
      className="card text-center order-details"
    >
      <h4>
        Order Summary
      </h4>
      <div
        className="m1"
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="f1"
        >
          Meal
        </div>
        <div
          className="f1"
        >
          Test meal
        </div>
      </div>
      <div
        className="m1"
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="f1"
        >
          Quantity
        </div>
        <div
          className="f1"
        >
          3
           
          plate
          s
        </div>
      </div>
      <div
        className="font-weight-bold m1"
        style={
          Object {
            "display": "flex",
          }
        }
      >
        <div
          className="f1"
        >
          <h5>
            TOTAL
          </h5>
        </div>
        <div
          className="f1"
        >
          <h5>
            ₦ 
            6000
          </h5>
        </div>
      </div>
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "space-around",
          }
        }
      >
        <Button
          className="btn btn-default"
          onClick={[Function]}
          style={
            Object {
              "margin": "1rem",
            }
          }
          value="Back to menu"
        />
        <Button
          className="btn btn-default"
          onClick={[Function]}
          style={
            Object {
              "margin": "1rem",
            }
          }
          value="Confirm Order"
        />
      </div>
    </section>
  </main>
  <Footer />
</div>
`;
